css/glowingbear.css
/* ... */
/* fix for firefox being stupid */
@-moz-document url-prefix() {
    .panel[data-state=collapsed] .panel-collapse * {
        display: none;
    }
}
/* bold hash before channels */
li.buffer.channel a span:last-of-type:before, #topbar .title .channel:before {
    color: #888;
    font-weight: bold;
}

li.buffer.channel_hash a span:last-of-type:before, #topbar .title .channel_hash:before {
    content: '#';
}

li.buffer.channel_plus a span:last-of-type:before, #topbar .title .channel_plus:before {
    content: '+';
}

li.buffer.channel_ampersand a span:last-of-type:before, #topbar .title .channel_ampersand:before {
    content: '&';
}

li.buffer.channel.active a span:last-of-type:before {
    color: #aaa;
}

li.buffer.indent.private a {
    padding-left: 17px;
}

.make-thinner {
    padding-right: -15px;
}

.settings-help {
    display: block;
    margin: -5px 0 -3px 19px;
    font-size: small;
}

.unselectable {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}

.emojione {
    font-size: inherit;
    height: 1em;
    width: 1.1em;
    min-height: 16px;
    min-width: 16px;
    display: inline-block;
    margin: -.2ex .15em .2ex;
    line-height: normal;
    vertical-align: middle;
}
img.emojione {
    width: auto;
}

.glyphicon-spin {
  -webkit-animation: spin 1000ms infinite linear;
  animation: spin 1000ms infinite linear;
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}
@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

@media (min-width: 1400px) {
    #sidebar[data-state=visible], #sidebar {
        width: 200px;
    }
    .content[sidebar-state="visible"] #bufferlines {
        margin-left: 205px;
    }
    #topbar .title {
        left: 205px;
    }
    .content[sidebar-state=visible] .footer {
        padding-left: 200px;
    }

    .nav-pills {
        font-size: 14px;
    }

    .nav-pills li a {
        padding: 10px 15px;
    }

    #nicklist {
        width: 140px;
    }
    .withnicklist {
      margin-right: 140px !important; /* nicklist */
    }
    .footer.withnicklist {
        padding-right: 148px !important;
    }
}

/* */
/* Mobile layout */
/* */
@media (max-width: 968px) {

    .mobile {
      display: inherit;
    }

    .desktop {
      display: none;
    }

    #bufferlines table {
        border-collapse: separate;
        border-spacing: 2px 3px;
    }

    #sidebar {
        font-size: normal;
        bottom: 0px;
        top: 0px;
        padding-bottom: 35px;
        width: 200px;
    }

    #sidebar.in, #sidebar.collapsing {
        -webkit-box-shadow: 0px 0px 120px #000;
        box-shadow: 0px 0px 120px #000;
        bottom: 0px;
    }

    #sidebar[data-state=visible] {
        transform: translate(0,0);
        -webkit-transform: translate(0,0); /* Safari */
    }

    #sidebar[data-state=hidden] {
        transform: translate(-200px,0);
        -webkit-transform: translate(-200px,0);
    }

    .content[sidebar-state=visible] #bufferlines, .content[sidebar-state=visible] .footer {
        margin-left: 0px;
        transform: translate(200px,0);
        -webkit-transform: translate(200px,0);
    }

    #topbar .title {
        left: 40px;
        right: 60px;
        text-align: center;
        font-size: 18px;
    }

    #topbar .brand img {
        height: 28px;
    }

    #topbar .badge {
        display: none;
    }


    #bufferlines, #nicklist {
        position: relative;
        min-height: 0;
        margin-left: 0;
        max-width: 100%;
        border: 0;
    }

    #nicklist {
        height: auto;
        padding: 35px 7px 35px 10px;
        text-align: center;
        position: fixed;
        margin-top: 10px;
        bottom: 0px;
    }

    .navbar-fixed-bottom {
        margin: 0;
    }

    .navbar {
        min-height: 0%;
    }

    .nav-pills {
        font-size: 14px;
    }

    .nav-pills li a {
        padding: 10px 15px;
    }

    #bufferlines {
        height: 100%;
        padding-bottom: 0;
    }

    #bufferlines tr.bufferline {
        display: block;
        overflow: hidden;
    }

    #bufferlines td.time {
        display: inline-block;
        padding-right: 3px;
        font-size: 0.8em;
    }

    #bufferlines td.time span.date {
        display: block;
        margin-bottom: -1px;
    }

    #bufferlines td.prefix {
        display: inline;
        padding-right: 5px;
        border: 0;
        font-weight: bold;
        font-size: 1.06em;
    }

    #bufferlines td.message {
        display: inline;
        padding: 0px !important;
    }

    .gb-modal .modal-dialog {
        margin: 20px 2%;
        width: 96%;
    }

    .footer {
        padding-left: 0px !important;
        padding-right: 0px !important;
        width: 100% !important;
    }

    .footer.withnicklist {
        padding-right: 108px !important;
    }

    ::-webkit-scrollbar {
        width: 5px;
        height: 5px;
    }
    .col-sm-9 {
        padding-right: 0px !important;
    }
}

